feat: save file funkar

--- a/src/testkod/notepad/Notepad.form
+++ b/src/testkod/notepad/Notepad.form
@@ -5,8 +5,13 @@
     <constraints>
       <xy x="20" y="20" width="834" height="659"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <minimumSize width="24" height="24"/>
+    </properties>
+    <border type="bevel-lowered">
+      <font/>
+      <color color="-16777216"/>
+    </border>
     <children>
       <scrollpane id="d301e" binding="scrollPane1">
         <constraints>
@@ -20,8 +25,10 @@
           <component id="f3c23" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints/>
             <properties>
-              <font/>
+              <dragEnabled value="false"/>
+              <font name="Lucida Sans Unicode" size="20" style="0"/>
               <lineWrap value="false"/>
+              <minimumSize width="1" height="17"/>
             </properties>
           </component>
         </children>
